--- a/assets/scss/vander/_bootstrap-component.scss
+++ b/assets/scss/vander/_bootstrap-component.scss
@@ -5,3 +5,5 @@
 @import "./../../../node_modules/bootstrap/scss/grid";
 @import "./../../../node_modules/bootstrap/scss/helpers";
 @import "./../../../node_modules/bootstrap/scss/utilities/api";
+@import "./../../../node_modules/bootstrap/scss/nav";
+@import "./../../../node_modules/bootstrap/scss/navbar";
