--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,263 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  background-color: 0;
+  font-size: 18px;
+  overflow: hidden;
+}
+
+.image-responsive {
+  width: 100%;
+  height: auto;
+}
+
+.primary-font-family {
+  font-family: "Fraunces", serif;
+}
+
+.mt-0 {
+  margin-top: 0px;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
+}
+
+.ml-0 {
+  margin-left: 0px;
+}
+
+.mr-0 {
+  margin-right: 0px;
+}
+
+.mx-0 {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.mx-0 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.mt-1 {
+  margin-top: 10px;
+}
+
+.mb-1 {
+  margin-bottom: 10px;
+}
+
+.ml-1 {
+  margin-left: 10px;
+}
+
+.mr-1 {
+  margin-right: 10px;
+}
+
+.mx-1 {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.mx-1 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.mt-2 {
+  margin-top: 20px;
+}
+
+.mb-2 {
+  margin-bottom: 20px;
+}
+
+.ml-2 {
+  margin-left: 20px;
+}
+
+.mr-2 {
+  margin-right: 20px;
+}
+
+.mx-2 {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.mx-2 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.mt-3 {
+  margin-top: 30px;
+}
+
+.mb-3 {
+  margin-bottom: 30px;
+}
+
+.ml-3 {
+  margin-left: 30px;
+}
+
+.mr-3 {
+  margin-right: 30px;
+}
+
+.mx-3 {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.mx-3 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.mt-4 {
+  margin-top: 40px;
+}
+
+.mb-4 {
+  margin-bottom: 40px;
+}
+
+.ml-4 {
+  margin-left: 40px;
+}
+
+.mr-4 {
+  margin-right: 40px;
+}
+
+.mx-4 {
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+.mx-4 {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.mt-5 {
+  margin-top: 50px;
+}
+
+.mb-5 {
+  margin-bottom: 50px;
+}
+
+.ml-5 {
+  margin-left: 50px;
+}
+
+.mr-5 {
+  margin-right: 50px;
+}
+
+.mx-5 {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.mx-5 {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.mt-6 {
+  margin-top: 60px;
+}
+
+.mb-6 {
+  margin-bottom: 60px;
+}
+
+.ml-6 {
+  margin-left: 60px;
+}
+
+.mr-6 {
+  margin-right: 60px;
+}
+
+.mx-6 {
+  margin-left: 60px;
+  margin-right: 60px;
+}
+
+.mx-6 {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+.mt-7 {
+  margin-top: 70px;
+}
+
+.mb-7 {
+  margin-bottom: 70px;
+}
+
+.ml-7 {
+  margin-left: 70px;
+}
+
+.mr-7 {
+  margin-right: 70px;
+}
+
+.mx-7 {
+  margin-left: 70px;
+  margin-right: 70px;
+}
+
+.mx-7 {
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
+
+.mt-8 {
+  margin-top: 80px;
+}
+
+.mb-8 {
+  margin-bottom: 80px;
+}
+
+.ml-8 {
+  margin-left: 80px;
+}
+
+.mr-8 {
+  margin-right: 80px;
+}
+
+.mx-8 {
+  margin-left: 80px;
+  margin-right: 80px;
+}
+
+.mx-8 {
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -6298,8 +6558,44 @@ progress {
   --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
-header .desktop-image {
-  background-image: url(./../../images/desktop/image-header.jpg);
+header {
+  background-image: url("./../../assets/images/desktop/image-header.jpg");
+  background-position-x: center;
+  background-position-y: top;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-repeat: repeat-x;
+  height: 900px;
+}
+header .logo img {
+  width: 200px;
+}
+header .nav {
+  cursor: pointer;
+}
+header .nav .nav-item {
+  padding: 10px 25px;
+  border-radius: 50px;
+  transition: 0.5s;
+}
+header .nav .nav-item.active {
+  background-color: #fff;
+  color: #000;
+  padding: 10px 25px;
+  border-radius: 50px;
+}
+header .nav .nav-item:hover:not(.active) {
+  background-color: #fff;
+  color: #000;
+}
+header .text-wrapper {
+  padding: 70px;
+}
+header .text-wrapper h1 {
+  font-size: 70px;
+  text-transform: uppercase;
+  letter-spacing: 15px;
+  font-weight: 900;
 }
 
 /*# sourceMappingURL=style.css.map */
