--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,6 +1,44 @@
-// style 
+//header  style
 header{
-    .desktop-image{
-        background-image: url(./../../images/desktop/image-header.jpg);
+    background-image: url("./../../assets/images/desktop/image-header.jpg");
+    background-position-x: center;
+    background-position-y: top;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-repeat: repeat-x;
+    height: 900px;
+    .logo {
+        img {
+            width: 200px;
+        }
     }
+      .nav{
+        cursor: pointer;
+        .nav-item{
+            &.active{
+                background-color:$white;
+                color: $black;
+                padding: 10px 25px;
+                border-radius: 50px;
+            }
+            padding: 10px 25px;
+            border-radius: 50px;
+            transition: .5s;
+            &:hover:not(.active){
+                background-color:$white;
+                color: $black;
+               
+            }
+        }
+      }
+      .text-wrapper{
+        padding: 70px;
+        h1{
+            font-size: 70px;
+             text-transform: uppercase;
+             letter-spacing: 15px;
+             font-weight: 900;
+        }
+      }
+
 }
