--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,12 +1,16 @@
 //header  style
 header{
     background-image: url("./../../assets/images/desktop/image-header.jpg");
-    background-position-x: center;
-    background-position-y: top;
+    // background-position-x: center;
+    // background-position-y: top;
+    // background-repeat: no-repeat;
+    // background-repeat: repeat-x;
+    // background-position: center;
+    // background-size: 100%; 
+    height: 800px;
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
-    background-repeat: repeat-x;
-    height: 900px;
+    background-size: cover;
     .logo {
         img {
             width: 200px;
