--- a/assets/scss/vander/_bootstrap-component.scss
+++ b/assets/scss/vander/_bootstrap-component.scss
@@ -7,4 +7,6 @@
 @import "./../../../node_modules/bootstrap/scss/utilities/api";
 @import "./../../../node_modules/bootstrap/scss/nav";
 @import "./../../../node_modules/bootstrap/scss/navbar";
-// @import "./../../../node_modules/bootstrap/scss/";
+@import "./../../../node_modules/bootstrap/scss/grid";
+@import "./../../../node_modules/bootstrap/scss/buttons";
+@import "./../../../node_modules/bootstrap/scss/button-group";
