--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,6 @@
+@import "../icons/style.css";
 @import "base/index";
-@import "vander/index";
 @import "layout/index";
+@import "vender/index";
+// @import "utility/index";
 
