--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,48 +1,74 @@
 //header  style
-header{
+header {
     background-image: url("./../../assets/images/desktop/image-header.jpg");
-    // background-position-x: center;
-    // background-position-y: top;
-    // background-repeat: no-repeat;
-    // background-repeat: repeat-x;
-    // background-position: center;
-    // background-size: 100%; 
     height: 800px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    @media (max-width: 576px) {
+        background-image: url("./../../../assets/images/mobile/image-header.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 530px;
+    }
+    .header-wrapper {
+        @media (max-width: 576px) {
+            padding: 1.5rem !important;
+        }
+    }
     .logo {
         img {
             width: 200px;
+            @media (max-width: 576px) {
+                width: 100px;
+            }
         }
     }
-      .nav{
+    .nav {
         cursor: pointer;
-        .nav-item{
-            &.active{
-                background-color:$white;
+        .nav-item {
+            &.active {
+                background-color: $white;
                 color: $black;
                 padding: 10px 25px;
                 border-radius: 50px;
             }
             padding: 10px 25px;
             border-radius: 50px;
-            transition: .5s;
-            &:hover:not(.active){
-                background-color:$white;
+            transition: 0.5s;
+            &:hover:not(.active) {
+                background-color: $white;
                 color: $black;
-               
             }
         }
-      }
-      .text-wrapper{
-        padding: 70px;
-        h1{
-            font-size: 70px;
-             text-transform: uppercase;
-             letter-spacing: 15px;
-             font-weight: 900;
+        &.mobile-manu {
+            display: none;
         }
-      }
-
+        @media (max-width: 576px) {
+            &.desktop-manu {
+                display: none;
+            }
+        }
+    }
+    .menu {
+        display: none;
+        @media (max-width: 576px) {
+            display: block;
+        }
+    }
+    .text-wrapper {
+        padding: 70px;
+        h1 {
+            font-size: 70px;
+            text-transform: uppercase;
+            letter-spacing: 15px;
+            font-weight: 900;
+            @media (max-width: 576px) {
+                font-size: 40px;
+                letter-spacing: 2px;
+                text-align: center;
+            }
+        }
+    }
 }
