--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,55 +1,81 @@
-main{
-    .row{
-        .bg-image-graphic{
+main {
+    .row {
+        .bg-image-graphic {
             background-image: url("./../../../assets/images/desktop/image-graphic-design.jpg");
             background-repeat: no-repeat;
-             background-size: 100%;
+            background-size: 100%;
             height: 650px;
+            @media (max-width: 576px) {
+                background-image: url("./../../../assets/images/mobile/image-graphic-design.jpg");
+                height: 512px;
+            }
         }
-        .bg-image-photography{
+        .bg-image-photography {
             background-image: url("./../../../assets/images/desktop/image-photography.jpg");
-             background-repeat: no-repeat;
-             background-size: 100%;
+            background-repeat: no-repeat;
+            background-size: 100%;
             height: 650px;
+            @media (max-width: 576px) {
+                background-image: url("./../../../assets/images/mobile/image-photography.jpg");
+                height: 512px;
+            }
         }
-        .bg-image-graphic{
-            h3{
+        
+        .bg-image-graphic {
+            .text-section{
+                @media (max-width: 576px) {
+                    width: 100% !important;
+                }
+                
+            }
+            h3 {
                 opacity: 0.8;
                 font-weight: 900;
             }
-            p{
+            p {
                 opacity: 0.7;
                 font-weight: 700;
             }
-          
         }
-        .bg-image-photography{
-            h3{
+        .bg-image-photography {
+            .text-section{
+                @media (max-width: 576px) {
+                    width: 100% !important;
+                }
+                
+            }
+            h3 {
                 opacity: 0.8;
                 font-weight: 900;
             }
-            p{
+            p {
                 opacity: 0.9;
                 font-weight: 700;
             }
         }
+    }
+    .testimonials{
+        p{
+            @media (max-width: 576px) {
+                font-size: 16px !important;
+            }
+        }
+    }
+    .lean-1 {
+        position: relative;
+        z-index: 100;
+        &:hover {
+            // background-color:#b6a023;
+            &::after {
+                background-color: #e4b4ac;
+            }
+        }
+    }
+    .lean-1::after {
+        content: "";
+        position: absolute;
+        background-color: #f9e2de;
 
-    }
-    .lean-1{
-        position: relative;
-        z-index: 100;
-        &:hover{
-            // background-color:#b6a023;
-            &::after{
-                background-color:#e4b4ac;
-            }
-        }
-    }
-    .lean-1::after{
-        content: "";
-        position: absolute;
-        background-color:#f9e2de;
-       
         height: 11px;
         width: 100%;
         bottom: -2px;
@@ -57,25 +83,40 @@ main{
         border-radius: 10px;
         z-index: -1;
     }
-    .lean-2{
+    .lean-2 {
         position: relative;
         z-index: 100;
-        &:hover{
+        &:hover {
             // background-color:#b6a023;
-            &::after{
-                background-color:#ffd9057a;
+            &::after {
+                background-color: #ffd9057a;
             }
         }
     }
-    .lean-2::after{
+    .lean-2::after {
         content: "";
         position: absolute;
-        background-color:#fff6c3;
+        background-color: #fff6c3;
         height: 11px;
         width: 100%;
         bottom: -2px;
         left: 0;
         border-radius: 10px;
         z-index: -1;
+    }
+    .text-section {
+        padding: 20px;
+        h2 {
+            @media (max-width: 576px) {
+               font-size: 35px;
+               margin-top: 50px;
+            }
+        }
+        p {
+            @media (max-width: 576px) {
+               font-size: 16px !important;
+            }
+        }
+        
     }
 }
