--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ body {
 }
 
 .w-60 {
-  width: 60%;
+  width: 70%;
 }
 @media (max-width: 576px) {
   .w-60 {
@@ -341,7 +341,7 @@ header {
 }
 @media (max-width: 576px) {
   header {
-    background-image: url("./../../../assets/images/mobile/image-header.jpg");
+    background-image: url("./../../assets/images/mobile/image-header.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -352,6 +352,12 @@ header {
   header .header-wrapper {
     padding: 1.5rem !important;
   }
+}
+header .header-wrapper .mobile-manu {
+  display: none;
+}
+header .header-wrapper .checkbox:checked + .mobile-manu {
+  display: block;
 }
 header .logo img {
   width: 200px;
@@ -378,9 +384,6 @@ header .nav .nav-item.active {
 header .nav .nav-item:hover:not(.active) {
   background-color: white;
   color: black;
-}
-header .nav.mobile-manu {
-  display: none;
 }
 @media (max-width: 576px) {
   header .nav.desktop-manu {
@@ -413,26 +416,26 @@ header .text-wrapper h1 {
 }
 
 main .row .bg-image-graphic {
-  background-image: url("./../../../assets/images/desktop/image-graphic-design.jpg");
+  background-image: url("./../../assets/images/desktop/image-graphic-design.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   height: 650px;
 }
 @media (max-width: 576px) {
   main .row .bg-image-graphic {
-    background-image: url("./../../../assets/images/mobile/image-graphic-design.jpg");
+    background-image: url("./../../assets/images/mobile/image-graphic-design.jpg");
     height: 512px;
   }
 }
 main .row .bg-image-photography {
-  background-image: url("./../../../assets/images/desktop/image-photography.jpg");
+  background-image: url("./../../assets/images/desktop/image-photography.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   height: 650px;
 }
 @media (max-width: 576px) {
   main .row .bg-image-photography {
-    background-image: url("./../../../assets/images/mobile/image-photography.jpg");
+    background-image: url("./../../assets/images/mobile/image-photography.jpg");
     height: 512px;
   }
 }
@@ -518,11 +521,14 @@ main .text-section {
   }
 }
 
-footer ul li {
+footer .nav .nav-item {
   cursor: pointer;
 }
-footer ul li:hover {
-  color: white;
+footer .nav .nav-item:hover {
+  color: white !important;
+}
+footer .nav .nav-item .social-media:hover {
+  background-color: white !important;
 }
 
 :root {
