--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -6,7 +6,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     @media (max-width: 576px) {
-        background-image: url("./../../../assets/images/mobile/image-header.jpg");
+        background-image: url("./../../assets/images/mobile/image-header.jpg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -16,6 +16,13 @@ header {
         @media (max-width: 576px) {
             padding: 1.5rem !important;
         }
+        .mobile-manu{
+            display: none;
+    }
+       .checkbox:checked+.mobile-manu{
+        display: block;
+       }
+    
     }
     .logo {
         img {
@@ -25,6 +32,7 @@ header {
             }
         }
     }
+   
     .nav {
         cursor: pointer;
         .nav-item {
@@ -42,15 +50,15 @@ header {
                 color: $black;
             }
         }
-        &.mobile-manu {
-            display: none;
-        }
+       
+       
         @media (max-width: 576px) {
             &.desktop-manu {
                 display: none;
             }
         }
     }
+   
     .menu {
         display: none;
         @media (max-width: 576px) {
