--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,22 +1,22 @@
 main {
     .row {
         .bg-image-graphic {
-            background-image: url("./../../../assets/images/desktop/image-graphic-design.jpg");
+            background-image: url("./../../assets/images/desktop/image-graphic-design.jpg");
             background-repeat: no-repeat;
             background-size: 100%;
             height: 650px;
             @media (max-width: 576px) {
-                background-image: url("./../../../assets/images/mobile/image-graphic-design.jpg");
+                background-image: url("./../../assets/images/mobile/image-graphic-design.jpg");
                 height: 512px;
             }
         }
         .bg-image-photography {
-            background-image: url("./../../../assets/images/desktop/image-photography.jpg");
+            background-image: url("./../../assets/images/desktop/image-photography.jpg");
             background-repeat: no-repeat;
             background-size: 100%;
             height: 650px;
             @media (max-width: 576px) {
-                background-image: url("./../../../assets/images/mobile/image-photography.jpg");
+                background-image: url("./../../assets/images/mobile/image-photography.jpg");
                 height: 512px;
             }
         }
