--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -54,7 +55,7 @@ body {
 }
 
 .w-60 {
-  width: 60%;
+  width: 70%;
 }
 @media (max-width: 576px) {
   .w-60 {
@@ -341,15 +342,44 @@ header {
 }
 @media (max-width: 576px) {
   header {
-    background-image: url("./../../../assets/images/mobile/image-header.jpg");
+    background-image: url("./../../assets/images/mobile/image-header.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     height: 530px;
   }
 }
+header .sidebar {
+  position: absolute;
+  width: 100%;
+  transition: all 0.5s ease-in-out;
+  left: 100%;
+}
+header .sidebar nav::after {
+  position: absolute;
+  top: 4px;
+  right: 24px;
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-left: 10px solid transparent;
+  border-right: 10px solid white;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid white;
+}
+header .sidebar nav .nav .nav-item.active {
+  background-color: hsl(48deg, 96%, 60%);
+  color: black !important;
+}
+header .sidebar nav .nav .nav-item:hover:not(.active) {
+  background-color: hsla(48deg, 96%, 60%, 0.541);
+  color: black;
+}
+header #menu:checked ~ .sidebar {
+  left: 0;
+}
 @media (max-width: 576px) {
-  header .header-wrapper {
+  header #menu .header-wrapper {
     padding: 1.5rem !important;
   }
 }
@@ -378,9 +408,6 @@ header .nav .nav-item.active {
 header .nav .nav-item:hover:not(.active) {
   background-color: white;
   color: black;
-}
-header .nav.mobile-manu {
-  display: none;
 }
 @media (max-width: 576px) {
   header .nav.desktop-manu {
@@ -462,6 +489,9 @@ main .row .bg-image-photography p {
   opacity: 0.9;
   font-weight: 700;
 }
+main .image-hover:hover {
+  transform: scale(1.02);
+}
 @media (max-width: 576px) {
   main .testimonials p {
     font-size: 16px !important;
@@ -518,11 +548,14 @@ main .text-section {
   }
 }
 
-footer ul li {
+footer .nav .nav-item {
   cursor: pointer;
 }
-footer ul li:hover {
-  color: white;
+footer .nav .nav-item:hover {
+  color: white !important;
+}
+footer .nav .nav-item .social-media:hover {
+  background-color: white;
 }
 
 :root {
