--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -1,59 +1,55 @@
 // === font ======
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap");
 // universal style
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-html,body{
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
-body{
-    background-color: red($color: #000000);
-    font-size: 18px;
-    // overflow: hidden;
-    
+body {
+  background-color: red($color: #000000);
+  font-size: 18px;
+  // overflow: hidden;
 }
 // helper class
-.image-responsive{
-    width: 100%;
-    height: auto;
-
+.image-responsive {
+  width: 100%;
+  height: auto;
 }
-.primary-font-family{
-    font-family: 'Fraunces', serif;
+.primary-font-family {
+  font-family: "Fraunces", serif;
 }
-.text-font-family{
-    font-family: 'Barlow', sans-serif;
+.text-font-family {
+  font-family: "Barlow", sans-serif;
 }
 
 // profile image
-.w-80px{
+.w-80px {
   width: 80px;
 }
-.h-80px{
-    height: 80px;
-  }
+.h-80px {
+  height: 80px;
+}
 
-  .h-500px{
-    height: 500px;
+.h-500px {
+  height: 500px;
+}
+.leter-spacing {
+  letter-spacing: 5px;
+  @media (max-width: 576px) {
+    letter-spacing: 3px;
   }
-  .leter-spacing{
-    letter-spacing: 5px;
-    @media (max-width: 576px) {
-      letter-spacing: 3px;
-    }
+}
+.fs-7 {
+  font-size: 55px;
+}
+.w-60 {
+  width: 70%;
+  @media (max-width: 576px) {
+    width: 100%;
   }
-  .fs-7{
-    font-size: 55px;
-  }
-  .w-60{
-    width: 60%;
-    @media (max-width: 576px) {
-      width: 100%;
-    }
-  }
-  
- 
+}
