--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -20,13 +20,12 @@ main {
                 height: 512px;
             }
         }
-        
+
         .bg-image-graphic {
-            .text-section{
+            .text-section {
                 @media (max-width: 576px) {
                     width: 100% !important;
                 }
-                
             }
             h3 {
                 opacity: 0.8;
@@ -38,11 +37,10 @@ main {
             }
         }
         .bg-image-photography {
-            .text-section{
+            .text-section {
                 @media (max-width: 576px) {
                     width: 100% !important;
                 }
-                
             }
             h3 {
                 opacity: 0.8;
@@ -53,9 +51,15 @@ main {
                 font-weight: 700;
             }
         }
+       
     }
-    .testimonials{
-        p{
+    .image-hover{
+        &:hover {
+            transform: scale(1.02); 
+        }
+}
+    .testimonials {
+        p {
             @media (max-width: 576px) {
                 font-size: 16px !important;
             }
@@ -108,15 +112,14 @@ main {
         padding: 20px;
         h2 {
             @media (max-width: 576px) {
-               font-size: 35px;
-               margin-top: 50px;
+                font-size: 35px;
+                margin-top: 50px;
             }
         }
         p {
             @media (max-width: 576px) {
-               font-size: 16px !important;
+                font-size: 16px !important;
             }
         }
-        
     }
 }
